# Clipping-automation

./: .coverage  .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sonar-project.properties
clipper_agency/: __init__.py  __main__.py
doc/: plan-trending-audio-download.md
docs/: PRD.md  SRS.md  requirements_traceability.md  social-media-api-comparison.md  technical_design.md
niches/: indonesian_artists.yaml
prompts/: researcher.md  reviewer.md  safety.txt  scriptwriter.md  visual_director.md
src/: orchestrator.ts  run.ts  state.ts
src/agents/: llm.ts  (+9 more)
templates/: b_roll_narration.yaml  news_card.yaml  rapid_update.yaml
tests/: conftest.py  test_agent_artifacts.py  test_agents_base.py  test_agents_composer.py  test_agents_researcher.py  test_agents_reviewer.py  test_agents_safety.py  test_agents_scriptwriter.py  test_agents_visual.py  test_agents_voice.py  test_artifacts.py  test_card_generator.py  test_card_to_video.py  test_cli.py  test_cli_job_debug.py  test_composer.py  test_config.py  test_config_loader.py  test_dashboard.py  test_db_connection.py  test_db_queries.py  test_db_schema.py  test_dotenv_loading.py  test_ffmpeg_preflight.py  test_fish_audio.py  test_gates.py  test_gemini_tts.py  test_integration.py  test_llm_client.py  test_llm_router.py  test_logging.py  test_manifest.py  test_media_probe.py  test_orchestrator_engine.py  test_output_packager.py  test_paths.py  test_placeholder.py  test_prompt_loader.py  test_rendering_adapters.py  (+17 more)
(+104 files in other folders)
