[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clipper-agency"
version = "0.1.0"
description = "Automated short-form video content production"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.scripts]
clipper = "clipper_agency.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "external: marks tests that call external APIs (deselect with '-m \"not external\"')",
    "slow: marks slow tests (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
relative_files = true
source = ["clipper_agency"]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
